# XZIB

./: .gitignore  Cargo.toml  README.md
src/: builder.rs  chunks.rs  color.rs  error.rs  format.rs  io.rs  lib.rs  main.rs
src/chunks/: body.rs  foot.rs  indx.rs  meta.rs  xmet.rs
